--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-standard": ">=4.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.19.1",
+    "tmp-promise": "^2.0.2",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.5.0",
     "typescript": "^3.7.2"
