--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@types/expand-tilde": "^2.0.0",
     "@types/fs-extra": "^8.0.1",
     "@types/jest": "^24.0.22",
     "@types/node": "^12.12.7",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "chalk": "^3.0.0",
+    "expand-tilde": "^2.0.2",
     "fs-extra": "^8.1.0",
     "shelljs": "^0.8.3"
   }
