--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "lib": ["esnext"],
+    "esModuleInterop": true,
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "preserveConstEnums": true,
